# stereo-parallel

./: .clang-tidy  .codacy.yml  .codedocs  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.rst
docs/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  compile_cl.hpp  constraint_graph.hpp  cuda_csp.hpp  disparity_graph.hpp  gpu_csp.hpp  image.cpp  image.hpp  indexing.hpp  indexing_checks.hpp  labeling_finder.hpp  lowest_penalties.hpp  main.cpp  pgm_io.cpp  pgm_io.hpp  solve_csp.hpp  types.hpp
lib/: CMakeLists.txt  compile_cl.cpp  constraint_graph.cpp  constraint_graph.cu  cuda_csp.cu  disparity_graph.cpp  disparity_graph.cu  gpu_csp.cpp  image.cpp  image.cu  indexing.cpp  indexing.cu  indexing_checks.cpp  indexing_checks.cu  labeling_finder.cpp  labeling_finder.cu  lowest_penalties.cpp  lowest_penalties.cu  main.cpp  pgm_io.cpp  solve_csp.cl  solve_csp.cu
tests/: CMakeLists.txt  api.cpp  constraint_graph.cpp  disparity_graph.cpp  image.cpp  labeling_finder.cpp  lowest_penalties.cpp  pgm_io.cpp
